--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/iv_publisher_avatar"
                 android:layout_width="@dimen/dp_49"
                 android:layout_height="@dimen/dp_49"
-                android:scaleType="centerCrop"
-                android:src="@drawable/none" />
+                android:scaleType="centerCrop"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -53,12 +52,13 @@
                         android:id="@+id/tv_publisher_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_4"
                         android:ellipsize="end"
                         android:singleLine="true"
-                        android:text="这里是用户名字"
                         android:textColor="@color/color_333333"
-                        android:textSize="@dimen/dp_15" />
+                        android:textSize="@dimen/dp_15"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true" />
 
                     <TextView
                         android:id="@+id/tv_publish_time_labe"
@@ -66,7 +66,6 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_marginBottom="@dimen/dp_4"
-                        android:text="这里是用户名字"
                         android:textColor="@color/color_999999"
                         android:textSize="@dimen/sp_12" />
                 </RelativeLayout>
@@ -74,27 +73,35 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_10"
             android:layout_marginTop="@dimen/dp_15"
-            android:text="附近的看过了都放假了看过的福禄寿，你说的，没烦恼吗，你，的什么拿房，美少女，没你说的，麻烦你收到没，发那么，十多年，烦死你地方，没得啥免费收到没，的拿房景点斯诺伐克几点上班南方科技的斯诺伐克纳斯达克烦恼四大皆空福年"
             android:textColor="@color/color_666666"
             android:textSize="@dimen/sp_14" />
 
         <ImageView
+            android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_120"
-            android:scaleType="centerCrop"
-            android:src="@drawable/none" />
+            android:scaleType="centerCrop" />
+        <com.mango.ui.widget.GridView
+            android:id="@+id/gv_picture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="3"
+            android:horizontalSpacing="@dimen/dp_15"
+            android:verticalSpacing="@dimen/dp_15"
+            android:background="@android:color/white"
+            android:visibility="gone"/>
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_15"
             android:layout_marginTop="@dimen/dp_10"
-            android:text="来自广州"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
