--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -209,7 +209,7 @@
                 <ImageView
                     android:id="@+id/iv_advert1"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_70"
+                    android:layout_height="66dp"
                     android:layout_marginBottom="@dimen/dp_20"
                     android:layout_marginTop="@dimen/dp_10"
                     android:adjustViewBounds="true"
@@ -328,7 +328,10 @@
     <include
         layout="@layout/layout_tab_home_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_49" />
+        android:layout_height="@dimen/dp_49"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 
