--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,4 +97,6 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+    <style name="Widget.GifMoviewView" parent="@android:style/Widget"></style>
+
 </resources>
