--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -29,12 +29,11 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tv_my_name"
+                    android:id="@+id/tv_nick_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/dp_49"
-                    android:text="宋小宝"
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_16" />
 
@@ -81,7 +80,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_8"
-                            android:text="-"
                             android:textColor="@color/color_000000"
                             android:textSize="@dimen/sp_18" />
                     </LinearLayout>
@@ -113,7 +111,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_8"
-                            android:text="-"
                             android:textColor="@color/color_000000"
                             android:textSize="@dimen/sp_18" />
                     </LinearLayout>
@@ -141,11 +138,10 @@
                             android:textSize="@dimen/sp_12" />
 
                         <TextView
-                            android:id="@+id/tv_dynamics_count"
+                            android:id="@+id/tv_trend_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/dp_8"
-                            android:text="-"
                             android:textColor="@color/color_000000"
                             android:textSize="@dimen/sp_18" />
                     </LinearLayout>
@@ -154,6 +150,7 @@
             </LinearLayout>
 
             <com.mango.ui.widget.RoundImageView
+                android:id="@+id/iv_avatar"
                 xmlns:round="http://schemas.android.com/apk/res-auto"
                 round:border_overlay="true"
                 round:border_width="@dimen/dp_2"
@@ -161,8 +158,7 @@
                 android:layout_width="@dimen/dp_84"
                 android:layout_height="@dimen/dp_84"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/dp_7"
-                android:src="@drawable/none"/>
+                android:layout_marginTop="@dimen/dp_7"/>
 
             <!--<ImageView
                 android:layout_width="@dimen/dp_84"
