--- a/app/src/main/res/layout/activity_set_nick_name.xml
+++ b/app/src/main/res/layout/activity_set_nick_name.xml
@@ -52,7 +52,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_22"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical">
 
                 <TextView
