--- a/app/src/main/res/layout/layout_ptr_loadmore_footer.xml
+++ b/app/src/main/res/layout/layout_ptr_loadmore_footer.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:background="@color/color_efeff4"
@@ -11,15 +11,16 @@
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
         android:layout_gravity="center"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/tv_loadmore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="@dimen/dp_15"
         android:text="点击加载更多"
         android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_12"/>
+        android:textSize="@dimen/sp_12" />
 
-</FrameLayout>
+</LinearLayout>
