--- a/app/src/main/res/drawable/shape_dotted_border.xml
+++ b/app/src/main/res/drawable/shape_dotted_border.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <!-- 虚线 -->
-            <stroke android:width="1dp" android:color="@color/color_333333" android:dashGap="4dp" android:dashWidth="4dp" />
-
-            <solid android:color="@color/color_efeff4" />
-        </shape>
+    <item android:state_pressed="true" android:drawable="@drawable/icon_add">
     </item>
 
-    <item>
-        <shape android:shape="rectangle">
-            <!-- 虚线 -->
-            <stroke android:width="1dp" android:color="@color/color_efeff4" android:dashGap="4dp" android:dashWidth="4dp" />
-
-            <solid android:color="@android:color/transparent" />
-        </shape>
+    <item android:drawable="@drawable/add_pic">
     </item>
 </selector>
