--- a/app/src/main/res/layout/layout_pull_listview.xml
+++ b/app/src/main/res/layout/layout_pull_listview.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.mango.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/refresh_layout"
-    xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    cube_ptr:ptr_duration_to_close="200"
-    cube_ptr:ptr_duration_to_close_header="700"
-    cube_ptr:ptr_keep_header_when_refresh="true"
-    cube_ptr:ptr_pull_to_fresh="false"
-    cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-    cube_ptr:ptr_resistance="1.8" >
-    <ListView
-        android:id="@+id/listview"
+    android:layout_height="match_parent">
+
+    <com.mango.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@color/color_efeff4"
-        android:background="@android:color/transparent"
-        android:drawSelectorOnTop="true"
-        android:dividerHeight="@dimen/dp_0.5"
-        android:cacheColorHint="@android:color/transparent" />
-</com.mango.ui.widget.MangoPtrFrameLayout>
+        android:background="@android:color/white"
+        cube_ptr:ptr_duration_to_close="200"
+        cube_ptr:ptr_duration_to_close_header="700"
+        cube_ptr:ptr_keep_header_when_refresh="true"
+        cube_ptr:ptr_pull_to_fresh="false"
+        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+        cube_ptr:ptr_resistance="1.8">
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:cacheColorHint="@android:color/transparent"
+            android:divider="@color/color_efeff4"
+            android:dividerHeight="@dimen/dp_0.5"
+            android:drawSelectorOnTop="true" />
+    </com.mango.ui.widget.MangoPtrFrameLayout>
+
+    <include
+        android:id="@+id/layout_empty"
+        layout="@layout/layout_listview_empty"
+        android:visibility="gone"/>
+</FrameLayout>
