--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -10,24 +10,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_order_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="单号：9016001"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
         <TextView
+            android:id="@+id/tv_pay_state_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="已付款"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
 
         <TextView
+            android:id="@+id/tv_order_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="2017-06-29 22:14"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
     </RelativeLayout>
@@ -38,22 +38,21 @@
         android:layout_marginBottom="@dimen/dp_15"
         android:layout_marginTop="@dimen/dp_15">
         <TextView
-            android:id="@+id/tv_count"
+            android:id="@+id/tv_order_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_alignParentRight="true"
-            android:text="x 1"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
         <TextView
+            android:id="@+id/tv_course_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@id/tv_count"
-            android:text="如何写好第一封求职信"
             android:textSize="@dimen/sp_16"
             android:textColor="@color/color_333333"/>
     </RelativeLayout>
@@ -63,22 +62,21 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_15">
         <TextView
-            android:id="@+id/tv_price"
+            android:id="@+id/tv_sale_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_alignParentRight="true"
-            android:text="9.9"
             android:textSize="@dimen/sp_16"
             android:textColor="@color/color_000000"/>
         <TextView
+            android:id="@+id/tv_member_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@id/tv_price"
-            android:text="蒋先明"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"/>
     </RelativeLayout>
@@ -90,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_10">
         <Button
+            android:id="@+id/btn_act"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:minHeight="0dp"
