--- a/app/src/main/res/layout/gridview_item_class_category.xml
+++ b/app/src/main/res/layout/gridview_item_class_category.xml
@@ -7,17 +7,17 @@
     android:gravity="center_horizontal">
 
     <ImageView
+        android:id="@+id/iv_logo"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
         android:adjustViewBounds="true"
-        android:scaleType="centerInside"
-        android:src="@drawable/home_pic1"/>
+        android:scaleType="fitXY"/>
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/dp_12"
         android:layout_marginTop="@dimen/dp_7"
-        android:text="互联网+"
         android:textColor="@color/color_666666"/>
 </LinearLayout>
