--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -2,10 +2,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layout_tab"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
+        android:gravity="center_vertical"
         android:background="@color/color_ffb900">
         <ImageButton
             android:id="@+id/ib_left"
@@ -13,6 +14,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerInside"
             android:adjustViewBounds="true"
+            android:visibility="invisible"
             android:src="@drawable/back"
             style="@style/repple_out_backguound"
             android:paddingBottom="@dimen/dp_11.5"
@@ -20,24 +22,12 @@
             android:paddingLeft="@dimen/dp_15"
             android:paddingRight="@dimen/dp_15"/>
 
-        <TextView
-            android:id="@+id/tv_right"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16"
-            android:ellipsize="end"
-            android:text="+动态"
-            android:singleLine="true"
-            android:paddingRight="@dimen/dp_15"
-            android:paddingLeft="@dimen/dp_15"
-            style="@style/repple_out_backguound"
-            android:layout_alignParentRight="true"/>
+
 
         <LinearLayout
             android:id="@+id/layout_search"
             android:layout_width="match_parent"
+            android:layout_weight="1"
             android:layout_height="@dimen/dp_31"
             android:layout_centerVertical="true"
             android:gravity="center"
@@ -63,7 +53,22 @@
                 android:text="输入关键字"/>
 
         </LinearLayout>
-    </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_right"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16"
+            android:ellipsize="end"
+            android:text="+动态"
+            android:singleLine="true"
+            android:paddingRight="@dimen/dp_10"
+            android:paddingLeft="@dimen/dp_10"
+            style="@style/repple_out_backguound"
+            android:layout_alignParentRight="true"/>
+    </LinearLayout>
 
     <include layout="@layout/layout_pull_listview"
         android:layout_width="match_parent"
