--- a/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
+++ b/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
@@ -16,36 +16,69 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_10"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_course_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="如何利用直播和网红来营销你的产品"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textSize="@dimen/sp_16"
-            android:textColor="@color/color_333333"/>
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16" />
 
-        <TextView
-            android:id="@+id/tv_member_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="王先生"
-            android:layout_marginTop="@dimen/dp_5"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textSize="@dimen/sp_16"
-            android:textColor="@color/color_ff0030"/>
-        <TextView
-            android:id="@+id/tv_type_name"
+            android:layout_marginTop="@dimen/dp_5">
+
+            <TextView
+                android:id="@+id/tv_member_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="王先生"
+                android:textColor="@color/color_ff0030"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:id="@+id/tv_jobs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="创始人"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_16" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="微课一对一"
-            android:layout_marginTop="@dimen/dp_5"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_999999"/>
+            android:layout_marginTop="@dimen/dp_5">
 
+            <TextView
+                android:id="@+id/tv_type_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="微课一对一"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_want_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="100人想听"
+                android:textColor="@color/color_999999"
+                android:textSize="@dimen/sp_14" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
