--- a/app/src/main/res/layout/layout_listview_header_teacher.xml
+++ b/app/src/main/res/layout/layout_listview_header_teacher.xml
@@ -3,26 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <com.bigkoo.convenientbanner.ConvenientBanner xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/course_banner"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_180">
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/home_kecheng"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/sp_16"
-            android:text="如何让您的设计变得与众不同"
-            android:gravity="center"
-            android:padding="@dimen/dp_10"
-            android:background="@color/color_80000000"
-            android:layout_alignParentBottom="true"
-            android:textColor="@android:color/white"/>
-    </RelativeLayout>
+        android:layout_height="@dimen/dp_180"
+        app:canLoop="true" />
     
     <com.mango.ui.widget.GridView
         android:id="@+id/gv_category"
