--- a/app/src/main/res/layout/listview_item_found.xml
+++ b/app/src/main/res/layout/listview_item_found.xml
@@ -85,14 +85,16 @@
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_120"
+            android:layout_marginBottom="@dimen/dp_15"
             android:scaleType="centerCrop" />
         <com.mango.ui.widget.GridView
             android:id="@+id/gv_picture"
             android:layout_width="match_parent"
+            android:layout_marginBottom="@dimen/dp_15"
             android:layout_height="wrap_content"
             android:numColumns="3"
-            android:horizontalSpacing="@dimen/dp_15"
-            android:verticalSpacing="@dimen/dp_15"
+            android:horizontalSpacing="@dimen/dp_5"
+            android:verticalSpacing="@dimen/dp_5"
             android:background="@android:color/white"
             android:visibility="gone"/>
 
@@ -101,7 +103,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_15"
-            android:layout_marginTop="@dimen/dp_10"
             android:textColor="@color/color_999999"
             android:textSize="@dimen/sp_12" />
     </LinearLayout>
