--- a/app/src/main/res/layout/fragment_found.xml
+++ b/app/src/main/res/layout/fragment_found.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/layout_tab"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
@@ -23,6 +23,17 @@
             android:paddingRight="@dimen/dp_15"/>
 
 
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:layout_centerInParent="true"/>
+
 
         <LinearLayout
             android:id="@+id/layout_search"
@@ -31,6 +42,7 @@
             android:layout_height="@dimen/dp_31"
             android:layout_centerVertical="true"
             android:gravity="center"
+            android:visibility="gone"
             android:background="@drawable/shape_bg_corners_tab_search"
             android:layout_toRightOf="@id/ib_left"
             android:layout_toLeftOf="@id/tv_right">
@@ -64,11 +76,11 @@
             android:ellipsize="end"
             android:text="+动态"
             android:singleLine="true"
-            android:paddingRight="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_15"
             android:paddingLeft="@dimen/dp_10"
             style="@style/repple_out_backguound"
             android:layout_alignParentRight="true"/>
-    </LinearLayout>
+    </RelativeLayout>
 
     <include layout="@layout/layout_pull_listview"
         android:layout_width="match_parent"
