--- a/app/src/main/res/layout/layout_header_teacher_detail.xml
+++ b/app/src/main/res/layout/layout_header_teacher_detail.xml
@@ -42,7 +42,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_666666"
-            android:layout_marginRight="@dimen/dp_15"
             android:textSize="@dimen/sp_14" />
 
         <TextView
@@ -51,7 +50,6 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_666666"
             android:layout_centerInParent="true"
-            android:layout_marginRight="@dimen/dp_15"
             android:textSize="@dimen/sp_14" />
 
         <TextView
@@ -60,9 +58,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:textColor="@color/color_666666"
-            android:layout_marginRight="@dimen/dp_15"
             android:textSize="@dimen/sp_14" />
-
     </RelativeLayout>
 
+    <View
+        style="@style/horizontal_line" />
 </LinearLayout>
