--- a/app/src/main/res/layout/listview_item_course_in_tutor_detail.xml
+++ b/app/src/main/res/layout/listview_item_course_in_tutor_detail.xml
@@ -1,52 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:padding="@dimen/dp_15"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_title"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:textColor="@color/color_333333"
-        android:textSize="@dimen/sp_15" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10">
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:text="@string/rmb"
-            android:textSize="@dimen/sp_16"
-            android:textColor="@color/color_000000"/>
-        
-        <TextView
-            android:id="@+id/tv_type_method"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
+        android:orientation="vertical"
+        android:padding="@dimen/dp_15">
 
         <TextView
-            android:id="@+id/tv_each_time"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/tv_type_method"
-            android:layout_toLeftOf="@id/tv_price"
-            android:paddingLeft="@dimen/dp_5"
-            android:paddingRight="@dimen/dp_5"
-            android:gravity="right"
-            android:layout_alignParentBottom="true"/>
-    </RelativeLayout>
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_15" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_10">
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:text="@string/rmb"
+                android:textColor="@color/color_000000"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:id="@+id/tv_type_method"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_each_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/tv_price"
+                android:layout_toRightOf="@id/tv_type_method"
+                android:gravity="right"
+                android:paddingLeft="@dimen/dp_5"
+                android:paddingRight="@dimen/dp_5" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <View
+        style="@style/margin_horizontal_line" />
 </LinearLayout>
