--- a/app/src/main/res/layout/layout_ptr_loadmore_footer.xml
+++ b/app/src/main/res/layout/layout_ptr_loadmore_footer.xml
@@ -11,6 +11,7 @@
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
         android:layout_gravity="center"
+        android:layout_marginRight="@dimen/dp_15"
         android:visibility="visible"/>
 
     <TextView
@@ -18,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginLeft="@dimen/dp_15"
         android:text="点击加载更多"
         android:textColor="@color/color_333333"
         android:textSize="@dimen/sp_12" />
