--- a/app/src/main/res/layout/activity_teacher_class_category.xml
+++ b/app/src/main/res/layout/activity_teacher_class_category.xml
@@ -2,48 +2,82 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:background="@color/color_efeff4">
 
-    <LinearLayout
-        android:id="@+id/layout_search"
+    <RelativeLayout
+        android:id="@+id/layout_tab"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_31"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/dp_15"
-        android:background="@drawable/shape_bg_corners_main_color">
+        android:layout_height="@dimen/dp_49"
+        android:background="@color/color_ffb900">
 
-        <ImageView
-            android:id="@+id/iv_tab_search"
-            android:layout_width="@dimen/dp_22"
-            android:layout_height="@dimen/dp_22"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_20"
-            android:adjustViewBounds="true"
+        <ImageButton
+            android:id="@+id/ib_left"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:scaleType="centerInside"
-            android:src="@drawable/sousuo" />
+            android:adjustViewBounds="true"
+            android:src="@drawable/back"
+            style="@style/repple_out_backguound"
+            android:paddingBottom="@dimen/dp_11.5"
+            android:paddingTop="@dimen/dp_11.5"
+            android:paddingRight="@dimen/dp_15"
+            android:paddingLeft="@dimen/dp_15"/>
 
         <TextView
-            android:id="@+id/tv_search"
+            android:id="@+id/tv_right"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/dp_5"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:text="输入关键字,找到您需要的工作包或导师"
-            android:singleLine="true"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16"
             android:ellipsize="end"
-            android:layout_marginRight="@dimen/dp_20"
-            android:textColor="@color/color_999999"
-            android:textSize="@dimen/sp_16" />
+            android:paddingRight="@dimen/dp_10"
+            android:text="我的授课"
+            android:singleLine="true"
+            style="@style/repple_out_backguound"
+            android:layout_alignParentRight="true"/>
 
-    </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/layout_search"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_31"
+            android:layout_centerVertical="true"
+            android:gravity="center_vertical"
+            android:layout_marginRight="@dimen/dp_15"
+            android:background="@drawable/shape_bg_rect_tab_search"
+            android:layout_toRightOf="@id/ib_left"
+            android:layout_toLeftOf="@id/tv_right">
 
+            <ImageView
+                android:id="@+id/iv_tab_search"
+                android:layout_width="@dimen/dp_22"
+                android:layout_height="@dimen/dp_22"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_10"
+                android:layout_centerVertical="true"
+                android:src="@drawable/sousuo"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"/>
+            <TextView
+                android:id="@+id/tv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:textColor="@color/color_999999"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:textSize="@dimen/sp_12"
+                android:text="输入您需要的工作包或导师"/>
+
+        </RelativeLayout>
+    </RelativeLayout>
     <ListView
         android:id="@+id/lv_category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/layout_search"
-        android:divider="@color/color_efeff4"
-        android:dividerHeight="@dimen/dp_10"
+        android:layout_below="@id/layout_tab"
+
         android:cacheColorHint="@android:color/transparent"/>
+
 </RelativeLayout>
