--- a/app/src/main/res/layout/fragment_tecaher.xml
+++ b/app/src/main/res/layout/fragment_tecaher.xml
@@ -17,6 +17,7 @@
             android:textSize="@dimen/sp_16"
             android:ellipsize="end"
             android:text="@string/teacher"
+            android:visibility="gone"
             android:singleLine="true"
             android:paddingBottom="@dimen/dp_11.5"
             android:paddingTop="@dimen/dp_11.5"
@@ -34,7 +35,6 @@
             android:text="我的授课"
             android:singleLine="true"
             android:paddingRight="@dimen/dp_10"
-            android:paddingLeft="@dimen/dp_10"
             style="@style/repple_out_backguound"
             android:layout_alignParentRight="true"/>
 
@@ -44,7 +44,9 @@
             android:layout_height="@dimen/dp_31"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
-            android:background="@drawable/shape_bg_corners_tab_search"
+            android:layout_marginLeft="@dimen/dp_15"
+            android:layout_marginRight="@dimen/dp_15"
+            android:background="@drawable/shape_bg_rect_tab_search"
             android:layout_toRightOf="@id/tv_left"
             android:layout_toLeftOf="@id/tv_right">
 
@@ -66,8 +68,8 @@
                 android:textColor="@color/color_999999"
                 android:layout_centerVertical="true"
                 android:gravity="center"
-                android:textSize="@dimen/sp_16"
-                android:text="搜索导师或课程"/>
+                android:textSize="@dimen/sp_12"
+                android:text="输入您需要的工作包或导师"/>
 
         </RelativeLayout>
     </RelativeLayout>
