--- a/app/src/main/res/layout/gridview_item_class_category.xml
+++ b/app/src/main/res/layout/gridview_item_class_category.xml
@@ -17,7 +17,7 @@
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_12"
+        android:textSize="@dimen/sp_12"
         android:layout_marginTop="@dimen/dp_7"
         android:textColor="@color/color_666666"/>
 </LinearLayout>
