--- a/app/src/main/res/layout/gridview_item_class_category_item.xml
+++ b/app/src/main/res/layout/gridview_item_class_category_item.xml
@@ -12,11 +12,13 @@
         android:layout_gravity="center_vertical"
         android:scaleType="fitXY"/>
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/dp_10"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:textColor="@color/color_666666"
-        android:textSize="@dimen/sp_14"
-        android:text="产品"/>
+        android:textSize="@dimen/sp_14"/>
 </LinearLayout>
