--- a/app/src/main/res/layout/gridview_item_home_pager.xml
+++ b/app/src/main/res/layout/gridview_item_home_pager.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/iv_classify"
-        android:layout_width="@dimen/dp_50"
-        android:layout_height="@dimen/dp_50"
+        android:layout_width="@dimen/dp_40"
+        android:layout_height="@dimen/dp_40"
         android:layout_marginTop="@dimen/dp_16"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
@@ -17,7 +17,7 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="@dimen/dp_12"
+        android:textSize="@dimen/sp_12"
         android:layout_marginTop="@dimen/dp_7"
         android:text="电商"
         android:textColor="@color/color_666666"/>
