--- a/app/src/main/res/layout/listview_item_calss_category.xml
+++ b/app/src/main/res/layout/listview_item_calss_category.xml
@@ -9,17 +9,17 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_15">
         <ImageView
+            android:id="@+id/iv_logo"
             android:layout_width="@dimen/dp_25"
-            android:layout_height="@dimen/dp_25" 
-            android:src="@drawable/ic_launcher_round"
+            android:layout_height="@dimen/dp_25"
             android:layout_gravity="center_vertical"
             android:adjustViewBounds="true"
-            android:scaleType="centerInside"/>
+            android:scaleType="fitXY"/>
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/dp_16"
-            android:text="互联网+"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_gravity="center_vertical"
             android:textColor="@color/color_333333"/>
@@ -36,4 +36,10 @@
         android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:numColumns="3"/>
+
+    <View
+        android:id="@+id/v_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/color_efeff4"/>
 </LinearLayout>
