--- a/app/src/main/res/layout/listview_item_course_in_popup.xml
+++ b/app/src/main/res/layout/listview_item_course_in_popup.xml
@@ -30,7 +30,7 @@
             android:layout_marginRight="@dimen/dp_15"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textColor="@color/color_666666"
+            android:textColor="@drawable/selector_text_title_main_white"
             android:textSize="@dimen/sp_14" />
     </RelativeLayout>
 
