--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,6 +45,7 @@
     <dimen name="dp_224">224dp</dimen>
     <dimen name="dp_34">34dp</dimen>
     <dimen name="dp_4">4dp</dimen>
+    <dimen name="dp_3">3dp</dimen>
     <dimen name="dp_162">162dp</dimen>
     <dimen name="dp_22">22dp</dimen>
     <dimen name="dp_25">25dp</dimen>
