--- a/app/src/main/res/layout/activity_set_nick_name.xml
+++ b/app/src/main/res/layout/activity_set_nick_name.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/iv_female"
                 android:layout_width="@dimen/dp_84"
                 android:layout_height="@dimen/dp_84"
-                android:src="@drawable/user_pic1"
+                android:src="@drawable/user_pic1_s"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"/>
 
