--- a/app/src/main/res/drawable/selector_res_pay_tip.xml
+++ b/app/src/main/res/drawable/selector_res_pay_tip.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:drawable="@drawable/icon_play" />
 
-    <item android:drawable="@drawable/icon_play_s"/>
+    <item android:drawable="@android:color/transparent"/>
 </selector>
