--- a/app/src/main/res/layout/gridview_item_add_picture.xml
+++ b/app/src/main/res/layout/gridview_item_add_picture.xml
@@ -20,8 +20,8 @@
     <ProgressBar
         android:id="@+id/progress"
         style="?android:attr/progressBarStyleSmallInverse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/dp_25"
+        android:layout_height="@dimen/dp_25"
         android:layout_gravity="center"
         android:visibility="gone" />
 
