--- a/app/src/main/res/layout/listview_item_card_list.xml
+++ b/app/src/main/res/layout/listview_item_card_list.xml
@@ -29,11 +29,13 @@
             android:textSize="@dimen/sp_16" />
 
 
-        <TextView
+        <EditText
             android:id="@+id/tv_card_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_10"
+            android:enabled="false"
+            android:background="@android:color/transparent"
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/color_666666"
