--- a/app/src/main/res/layout/listview_item_messagelist.xml
+++ b/app/src/main/res/layout/listview_item_messagelist.xml
@@ -8,7 +8,7 @@
         android:id="@+id/iv_avatar"
         android:layout_width="@dimen/dp_60"
         android:layout_height="@dimen/dp_60"
-        android:src="@drawable/none" />
+        android:src="@mipmap/logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,9 +66,9 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_num"
-                    android:layout_width="14dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="bottom|right"
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_gravity="top|right"
                     android:gravity="center"
                     android:background="@drawable/shape_bg_red_oval"
                     android:ellipsize="end"
