--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_count"
+            android:layout_toLeftOf="@id/tv_order_count"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_16" />
     </RelativeLayout>
