--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -149,7 +149,6 @@
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/icon_more"
                     android:gravity="right|center"
-                    android:hint="一次"
                     android:textColor="@color/color_666666"
                     android:textColorHint="@color/color_999999"
                     android:textSize="@dimen/sp_14" />
@@ -160,7 +159,6 @@
                     android:layout_height="wrap_content"
                     android:drawableRight="@drawable/icon_more"
                     android:gravity="right|center"
-                    android:hint="每次约一小时"
                     android:textColor="@color/color_666666"
                     android:textColorHint="@color/color_999999"
                     android:textSize="@dimen/sp_14" />
@@ -183,6 +181,7 @@
             android:layout_height="@dimen/dp_120"
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginBottom="@dimen/dp_15"
+            android:padding="@dimen/dp_10"
             android:gravity="left|top"
             android:textSize="@dimen/sp_14"
             android:textColor="@color/color_666666"
@@ -205,8 +204,8 @@
             android:layout_marginTop="@dimen/dp_15">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_60"
                 android:adjustViewBounds="true"
                 android:src="@drawable/add_pic"/>
 
