--- a/app/src/main/res/layout/listview_item_class_list.xml
+++ b/app/src/main/res/layout/listview_item_class_list.xml
@@ -6,30 +6,17 @@
     android:descendantFocusability="blocksDescendants"
     android:padding="@dimen/dp_15">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15">
         <TextView
-            android:id="@+id/tv_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_alignParentRight="true"
-            android:text="x 1"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
-        <TextView
+            android:id="@+id/tv_course_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/tv_count"
+            android:layout_marginBottom="@dimen/dp_15"
             android:text="如何写好第一封求职信"
             android:textSize="@dimen/sp_16"
             android:textColor="@color/color_333333"/>
-    </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -46,6 +33,7 @@
             android:textSize="@dimen/sp_16"
             android:textColor="@color/color_000000"/>
         <TextView
+            android:id="@+id/tv_type_method"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
