--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -42,6 +42,7 @@
             android:paddingLeft="@dimen/dp_10"
             android:paddingRight="@dimen/dp_10"
             android:text="下单"
+            android:enabled="false"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/dp_14" />
     </RelativeLayout>
@@ -62,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_180"
                 android:adjustViewBounds="true"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerInside" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -207,6 +208,28 @@
 
             <TextView
                 android:id="@+id/tv_type_method"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_15"
+                android:textColor="@color/color_666666"
+                android:paddingLeft="@dimen/dp_15"
+                android:paddingRight="@dimen/dp_15"
+                android:textSize="@dimen/sp_14" />
+
+            <View style="@style/margin_horizontal_line"
+                android:layout_marginTop="@dimen/dp_15"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="【特别说明】"
+                android:textSize="@dimen/sp_16"
+                android:layout_marginTop="@dimen/dp_15"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:textColor="@color/color_333333"/>
+
+            <TextView
+                android:id="@+id/tv_type_explains"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
