--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -47,6 +47,7 @@
                 android:paddingRight="@dimen/dp_10"
                 android:paddingTop="@dimen/dp_8"
                 android:text="取消订单"
+                android:visibility="gone"
                 android:textColor="@drawable/selector_text_color_cancel_btn"
                 android:textSize="@dimen/sp_14" />
 
@@ -64,6 +65,7 @@
                 android:paddingRight="@dimen/dp_10"
                 android:paddingTop="@dimen/dp_8"
                 android:text="立即付款"
+                android:visibility="gone"
                 android:textColor="@drawable/selector_text_color_important_btn"
                 android:textSize="@dimen/sp_14" />
 
@@ -240,9 +242,11 @@
             <View style="@style/horizontal_line" />
 
             <LinearLayout
+                android:id="@+id/layout_material"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:visibility="gone"
                 android:layout_marginTop="@dimen/dp_15"
                 android:layout_marginBottom="@dimen/dp_15">
 
@@ -252,9 +256,19 @@
                     android:textColor="@color/color_666666"
                     android:textSize="@dimen/sp_14"
                     android:text="相关资料和附件："/>
+
+                <GridLayout
+                    android:id="@+id/grid_material"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:columnCount="5"
+                    android:layout_marginTop="@dimen/dp_15" />
             </LinearLayout>
 
-            <View style="@style/horizontal_line" />
+            <View
+                android:id="@+id/line_material"
+                android:visibility="gone"
+                style="@style/horizontal_line" />
         </LinearLayout>
     </ScrollView>
 
