--- a/app/src/main/res/layout/activity_place_order.xml
+++ b/app/src/main/res/layout/activity_place_order.xml
@@ -47,7 +47,6 @@
                     android:id="@+id/tv_course_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="标题"
                     android:singleLine="true"
                     android:ellipsize="end"
                     android:layout_centerVertical="true"
@@ -69,7 +68,6 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp_5"
                     android:layout_alignParentRight="true"
-                    android:text="9.9"
                     android:textSize="@dimen/sp_16"
                     android:textColor="@color/color_000000"/>
                 <TextView
@@ -77,7 +75,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:text="名字"
                     android:layout_alignParentLeft="true"
                     android:layout_toLeftOf="@id/tv_sale_price"
                     android:textSize="@dimen/sp_14"
@@ -129,6 +126,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_code_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="right"
@@ -137,8 +135,7 @@
                 android:textSize="@dimen/sp_15"
                 android:layout_marginBottom="@dimen/dp_15"
                 android:singleLine="true"
-                android:ellipsize="end"
-                android:text="派号：123123213，享八折优惠"/>
+                android:ellipsize="end"/>
 
             <View
                 style="@style/horizontal_line" />
@@ -155,8 +152,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/dp_16"
                    android:layout_alignParentRight="true"
-                    android:textColor="@color/color_333333"
-                    android:text="99"/>
+                    android:textColor="@color/color_333333"/>
 
                 <TextView
                     android:layout_width="wrap_content"
