--- a/app/src/main/res/layout/activity_interact_area.xml
+++ b/app/src/main/res/layout/activity_interact_area.xml
@@ -17,7 +17,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@id/layout_bottom">
 
         <include layout="@layout/layout_pull_listview" />
