--- a/app/src/main/res/layout/layout_listview_empty.xml
+++ b/app/src/main/res/layout/layout_listview_empty.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:gravity="center"
-    android:background="@android:color/white"
+    android:background="@color/color_efeff4"
     android:orientation="vertical" >
 
     <ImageView
