--- a/app/src/main/res/layout/listview_item_card_list.xml
+++ b/app/src/main/res/layout/listview_item_card_list.xml
@@ -2,46 +2,56 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="@dimen/dp_15">
+    android:orientation="vertical">
 
-    <cn.com.mangopi.android.ui.widget.RoundImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
-        android:src="@drawable/none" />
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:padding="@dimen/dp_15">
 
+        <cn.com.mangopi.android.ui.widget.RoundImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
+            android:src="@drawable/none" />
 
-        <TextView
-            android:id="@+id/tv_blank_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16" />
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:gravity="center_vertical"
+            android:orientation="vertical">
 
 
-        <EditText
-            android:id="@+id/tv_card_no"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_10"
-            android:enabled="false"
-            android:background="@android:color/transparent"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
+            <TextView
+                android:id="@+id/tv_blank_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_16" />
 
+
+            <EditText
+                android:id="@+id/tv_card_no"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@android:color/transparent"
+                android:ellipsize="end"
+                android:enabled="false"
+                android:singleLine="true"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
+    <View
+        android:id="@+id/v_line"
+        style="@style/horizontal_line" />
 </LinearLayout>
