--- a/app/src/main/res/layout/listview_item_class_list.xml
+++ b/app/src/main/res/layout/listview_item_class_list.xml
@@ -1,85 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/selector_bg_layout_item"
-    android:descendantFocusability="blocksDescendants"
-    android:padding="@dimen/dp_15">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/selector_bg_layout_item"
+        android:descendantFocusability="blocksDescendants"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_15">
 
         <TextView
             android:id="@+id/tv_course_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/dp_15"
-            android:textSize="@dimen/sp_16"
-            android:textColor="@color/color_333333"/>
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_16" />
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15">
-        <TextView
-            android:id="@+id/tv_price"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_alignParentRight="true"
-            android:text="@string/rmb"
-            android:textSize="@dimen/sp_16"
-            android:textColor="@color/color_000000"/>
-        <TextView
-            android:id="@+id/tv_type_method"
-            android:layout_width="wrap_content"
+            android:layout_marginBottom="@dimen/dp_15">
+
+            <TextView
+                android:id="@+id/tv_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:text="@string/rmb"
+                android:textColor="@color/color_000000"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:id="@+id/tv_type_method"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/tv_price"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+        </RelativeLayout>
+
+        <View style="@style/horizontal_line" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/tv_price"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/color_666666"/>
-    </RelativeLayout>
+            android:layout_marginTop="@dimen/dp_10"
+            android:gravity="right">
 
-    <View style="@style/horizontal_line" />
+            <Button
+                android:id="@+id/btn_del"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_btn_bg_lesser_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_20"
+                android:paddingRight="@dimen/dp_20"
+                android:paddingTop="@dimen/dp_8"
+                android:text="删除"
+                android:textColor="@drawable/selector_text_color_lesser_btn"
+                android:textSize="@dimen/sp_14" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_marginTop="@dimen/dp_10">
-
-        <Button
-            android:id="@+id/btn_del"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:background="@drawable/selector_btn_bg_lesser_corners"
-            android:textColor="@drawable/selector_text_color_lesser_btn"
-            android:textSize="@dimen/sp_14"
-            android:text="删除"
-            android:paddingTop="@dimen/dp_8"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_20"
-            android:paddingRight="@dimen/dp_20"/>
-
-        <Button
-            android:id="@+id/btn_function"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:background="@drawable/selector_btn_bg_lesser_corners"
-            android:textColor="@drawable/selector_text_color_lesser_btn"
-            android:textSize="@dimen/sp_14"
-            android:visibility="gone"
-            android:text="下架"
-            android:paddingTop="@dimen/dp_8"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_20"
-            android:paddingRight="@dimen/dp_20"/>
+            <Button
+                android:id="@+id/btn_function"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:background="@drawable/selector_btn_bg_lesser_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_20"
+                android:paddingRight="@dimen/dp_20"
+                android:paddingTop="@dimen/dp_8"
+                android:text="下架"
+                android:textColor="@drawable/selector_text_color_lesser_btn"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone" />
+        </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:id="@+id/v_divider_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/color_efeff4" />
 </LinearLayout>
