--- a/app/src/main/res/layout/listview_item_interact_area.xml
+++ b/app/src/main/res/layout/listview_item_interact_area.xml
@@ -1,82 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="@dimen/dp_15">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_15">
 
-        <cn.com.mangopi.android.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
-            android:layout_width="@dimen/dp_49"
-            android:layout_height="@dimen/dp_49"
-            android:src="@drawable/none" />
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/layout_top_right"
-                android:layout_width="wrap_content"
+            <cn.com.mangopi.android.ui.widget.RoundImageView xmlns:round="http://schemas.android.com/apk/res-auto"
+                android:layout_width="@dimen/dp_49"
+                android:layout_height="@dimen/dp_49"
+                android:src="@drawable/none" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_alignParentRight="true">
-                <ImageView
-                    android:id="@+id/iv_comment"
-                    android:layout_width="@dimen/dp_22"
-                    android:layout_height="@dimen/dp_22"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_launcher"
-                    android:scaleType="centerInside"/>
+                android:layout_marginLeft="@dimen/dp_10"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="@dimen/dp_22"
-                    android:layout_height="@dimen/dp_22"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:src="@drawable/ic_launcher"
-                    android:scaleType="centerInside"/>
-            </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/layout_top_right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true">
 
-           <RelativeLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:layout_marginRight="@dimen/dp_5"
-               android:layout_toLeftOf="@id/layout_top_right">
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginTop="@dimen/dp_4"
-                   android:text="这里是用户名字"
-                   android:singleLine="true"
-                   android:ellipsize="end"
-                   android:textColor="@color/color_333333"
-                   android:textSize="@dimen/dp_15" />
+                    <ImageView
+                        android:id="@+id/iv_comment"
+                        android:layout_width="@dimen/dp_22"
+                        android:layout_height="@dimen/dp_22"
+                        android:layout_gravity="center_vertical"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_launcher" />
 
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:layout_marginBottom="@dimen/dp_4"
-                   android:layout_alignParentBottom="true"
-                   android:text="这里是用户名字"
-                   android:textColor="@color/color_999999"
-                   android:textSize="@dimen/sp_12" />
-           </RelativeLayout>
-        </RelativeLayout>
+                    <ImageView
+                        android:layout_width="@dimen/dp_22"
+                        android:layout_height="@dimen/dp_22"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_launcher" />
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/dp_5"
+                    android:layout_toLeftOf="@id/layout_top_right">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/dp_4"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:text="这里是用户名字"
+                        android:textColor="@color/color_333333"
+                        android:textSize="@dimen/dp_15" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="@dimen/dp_4"
+                        android:text="这里是用户名字"
+                        android:textColor="@color/color_999999"
+                        android:textSize="@dimen/sp_12" />
+                </RelativeLayout>
+            </RelativeLayout>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_15"
+            android:text="附近的看过了都放假了看"
+            android:textColor="@color/color_666666"
+            android:textSize="@dimen/sp_14" />
+
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_15"
-        android:text="附近的看过了都放假了看"
-        android:textColor="@color/color_666666"
-        android:textSize="@dimen/sp_14" />
-
+    <View
+        android:id="@+id/v_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/color_efeff4"/>
 </LinearLayout>
