--- a/app/src/main/res/layout/listview_item_order_list.xml
+++ b/app/src/main/res/layout/listview_item_order_list.xml
@@ -1,156 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/selector_bg_layout_item"
-    android:descendantFocusability="blocksDescendants"
     android:orientation="vertical"
-    android:padding="@dimen/dp_15">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15">
+        android:background="@drawable/selector_bg_layout_item"
+        android:descendantFocusability="blocksDescendants"
+        android:orientation="vertical"
+        android:padding="@dimen/dp_15">
 
-        <TextView
-            android:id="@+id/tv_order_no"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
+            android:layout_marginBottom="@dimen/dp_15">
 
-        <TextView
-            android:id="@+id/tv_pay_state_label"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_order_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_pay_state_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_order_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+        </RelativeLayout>
+
+        <View style="@style/horizontal_line" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
+            android:layout_marginBottom="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_15">
 
-        <TextView
-            android:id="@+id/tv_order_time"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_order_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+
+            <TextView
+                android:id="@+id/tv_course_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/tv_order_count"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_16" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
-    </RelativeLayout>
-    <View style="@style/horizontal_line" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15"
-        android:layout_marginTop="@dimen/dp_15">
+            android:layout_marginBottom="@dimen/dp_15">
 
-        <TextView
-            android:id="@+id/tv_order_count"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tv_sale_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:textColor="@color/color_000000"
+                android:textSize="@dimen/sp_16" />
+
+            <TextView
+                android:id="@+id/tv_member_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@id/tv_price"
+                android:textColor="@color/color_666666"
+                android:textSize="@dimen/sp_14" />
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/v_line"
+            style="@style/horizontal_line" />
+
+        <LinearLayout
+            android:id="@+id/layout_action"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
+            android:layout_marginTop="@dimen/dp_10"
+            android:gravity="right">
 
-        <TextView
-            android:id="@+id/tv_course_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_order_count"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16" />
-    </RelativeLayout>
+            <Button
+                android:id="@+id/btn_act"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:background="@drawable/selector_btn_bg_lesser_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_8"
+                android:text="取消安排"
+                android:textColor="@drawable/selector_text_color_lesser_btn"
+                android:textSize="@dimen/sp_14"
+                android:visibility="gone" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/dp_15">
+            <Button
+                android:id="@+id/btn_cancle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:background="@drawable/selector_btn_bg_cancel_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_8"
+                android:text="取消订单"
+                android:textColor="@drawable/selector_text_color_cancel_btn"
+                android:textSize="@dimen/sp_14" />
 
-        <TextView
-            android:id="@+id/tv_sale_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:textColor="@color/color_000000"
-            android:textSize="@dimen/sp_16" />
+            <Button
+                android:id="@+id/btn_pay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:background="@drawable/selector_btn_bg_important_corners"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingBottom="@dimen/dp_8"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_8"
+                android:text="立即付款"
+                android:textColor="@drawable/selector_text_color_important_btn"
+                android:textSize="@dimen/sp_14" />
 
-        <TextView
-            android:id="@+id/tv_member_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/tv_price"
-            android:textColor="@color/color_666666"
-            android:textSize="@dimen/sp_14" />
-    </RelativeLayout>
+        </LinearLayout>
 
-    <View
-        android:id="@+id/v_line"
-        style="@style/horizontal_line" />
-
-    <LinearLayout
-        android:id="@+id/layout_action"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:gravity="right">
-
-        <Button
-            android:id="@+id/btn_act"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:background="@drawable/selector_btn_bg_lesser_corners"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_8"
-            android:text="取消安排"
-            android:textColor="@drawable/selector_text_color_lesser_btn"
-            android:textSize="@dimen/sp_14"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/btn_cancle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:background="@drawable/selector_btn_bg_cancel_corners"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_8"
-            android:text="取消订单"
-            android:textColor="@drawable/selector_text_color_cancel_btn"
-            android:textSize="@dimen/sp_14" />
-
-        <Button
-            android:id="@+id/btn_pay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginLeft="@dimen/dp_15"
-            android:background="@drawable/selector_btn_bg_important_corners"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:paddingBottom="@dimen/dp_8"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="@dimen/dp_8"
-            android:text="立即付款"
-            android:textColor="@drawable/selector_text_color_important_btn"
-            android:textSize="@dimen/sp_14" />
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/v_divider_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/color_efeff4" />
 </LinearLayout>
