--- a/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
+++ b/app/src/main/res/layout/listview_item_recommend_teacher_class.xml
@@ -2,84 +2,94 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/white"
-    android:padding="@dimen/dp_15">
-
-
-    <cn.com.mangopi.android.ui.widget.RoundImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="@dimen/dp_60"
-        android:layout_height="@dimen/dp_60"
-        android:src="@drawable/none" />
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:orientation="vertical">
+        android:background="@android:color/white"
+        android:padding="@dimen/dp_15">
 
-        <TextView
-            android:id="@+id/tv_course_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="如何利用直播和网红来营销你的产品"
-            android:textColor="@color/color_333333"
-            android:textSize="@dimen/sp_16" />
+
+        <cn.com.mangopi.android.ui.widget.RoundImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
+            android:src="@drawable/none" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4">
+            android:layout_marginLeft="@dimen/dp_10"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tv_member_name"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_course_title"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="王先生"
-                android:textColor="@color/color_ff0030"
-                android:textSize="@dimen/sp_14" />
+                android:text="如何利用直播和网红来营销你的产品"
+                android:textColor="@color/color_333333"
+                android:textSize="@dimen/sp_16" />
 
-            <TextView
-                android:id="@+id/tv_jobs"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="创始人"
-                android:textColor="@color/color_666666"
-                android:textSize="@dimen/sp_14" />
-        </LinearLayout>
+                android:layout_marginTop="@dimen/dp_4">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_4">
+                <TextView
+                    android:id="@+id/tv_member_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="王先生"
+                    android:textColor="@color/color_ff0030"
+                    android:textSize="@dimen/sp_14" />
 
-            <TextView
-                android:id="@+id/tv_type_name"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tv_jobs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="创始人"
+                    android:textColor="@color/color_666666"
+                    android:textSize="@dimen/sp_14" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="微课一对一"
-                android:textColor="@color/color_999999"
-                android:textSize="@dimen/sp_12" />
+                android:layout_marginTop="@dimen/dp_4">
 
-            <TextView
-                android:id="@+id/tv_want_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_10"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="100人想听"
-                android:textColor="@color/color_999999"
-                android:textSize="@dimen/sp_12" />
+                <TextView
+                    android:id="@+id/tv_type_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="微课一对一"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_12" />
+
+                <TextView
+                    android:id="@+id/tv_want_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="100人想听"
+                    android:textColor="@color/color_999999"
+                    android:textSize="@dimen/sp_12" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+
+    <View
+        android:id="@+id/v_line"
+        style="@style/horizontal_line" />
 </LinearLayout>
