--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,4 @@
-<cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     cube_ptr:ptr_keep_header_when_refresh="true"
     cube_ptr:ptr_pull_to_fresh="false"
     cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
-    cube_ptr:ptr_resistance="1.8">
+    cube_ptr:ptr_resistance="1.8">-->
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -231,13 +231,14 @@
                         android:scaleType="centerCrop" />
 
                     <com.fang.dashview.DashView
+                        xmlns:dash="http://schemas.android.com/apk/res-auto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        cube_ptr:dashWidth="4dp"
-                        cube_ptr:lineWidth="4dp"
-                        cube_ptr:lineColor="@color/color_efeff4"
-                        cube_ptr:dashOrientation="0"
-                        cube_ptr:lineHeight="1dp" />
+                        dash:dashWidth="4dp"
+                        dash:lineWidth="4dp"
+                        dash:lineColor="@color/color_efeff4"
+                        dash:dashOrientation="0"
+                        dash:lineHeight="1dp" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -353,4 +354,5 @@
             android:layout_alignParentTop="true" />
 
     </RelativeLayout>
-</cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout>
+<!--
+</cn.com.mangopi.android.ui.widget.MangoPtrFrameLayout>-->
