--- a/app/src/main/res/layout/layout_item_setting.xml
+++ b/app/src/main/res/layout/layout_item_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_bg_layout_item"
@@ -7,29 +7,10 @@
     android:paddingBottom="@dimen/dp_15">
 
 
-    <ImageView
-        android:id="@+id/iv_right"
-        android:layout_width="@dimen/dp_22"
-        android:layout_height="@dimen/dp_22"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/dp_15"
-        android:adjustViewBounds="true"
-        android:src="@drawable/icon_more"
-        android:scaleType="centerInside"/>
-
-    <TextView
-        android:id="@+id/tv_right"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/sp_14"
-        android:layout_toLeftOf="@id/iv_right"
-        android:layout_marginRight="@dimen/dp_5"
-        android:layout_centerVertical="true"
-        android:textColor="@color/color_999999"/>
-
     <TextView
         android:id="@+id/tv_left"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_15"
         android:singleLine="true"
@@ -37,6 +18,32 @@
         android:textSize="@dimen/sp_14"
         android:layout_toLeftOf="@id/tv_right"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
+        android:layout_gravity="center_vertical"
         android:textColor="@color/color_666666"/>
-</RelativeLayout>
+
+
+
+    <TextView
+        android:id="@+id/tv_right"
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/sp_14"
+        android:singleLine="true"
+        android:gravity="right|center_vertical"
+        android:ellipsize="end"
+        android:layout_toLeftOf="@id/iv_right"
+        android:layout_marginRight="@dimen/dp_5"
+        android:layout_gravity="center_vertical"
+        android:textColor="@color/color_999999"/>
+
+    <ImageView
+        android:id="@+id/iv_right"
+        android:layout_width="@dimen/dp_22"
+        android:layout_height="@dimen/dp_22"
+        android:layout_gravity="center_vertical"
+        android:layout_marginRight="@dimen/dp_15"
+        android:adjustViewBounds="true"
+        android:src="@drawable/icon_more"
+        android:scaleType="centerInside"/>
+</LinearLayout>
